// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Gudang — snapshot qty × price mutation × viewport > kombinasi: existing + botol · qty & harga & karton per viewport > snapshot: desktop · existing · botol · qty+harga+karton 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 2 botol (= 1.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 4 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=4 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 4 botol
[SUM] Tambahan stok | 4 botol (= 2.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 40.000

=== step 2: harga 10000 → 15000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=4 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 4 botol
[SUM] Tambahan stok | 4 botol (= 2.000 pcs)
[SUM] Harga per botol | Rp 15.000
[SUM] Harga per pcs | Rp 30
[SUM] Total biaya | Rp 60.000

=== step 3: toggle Karton ON, qty 4 → 1 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=1 · pricePkg=15000 · priceBase=- · mode=package · karton=ON
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 100 botol (1 karton)
[SUM] Tambahan stok | 100 botol (= 50.000 pcs) · = 1 karton
[SUM] Harga per botol | Rp 150
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 15.000

=== step 4: harga 15000 → 18000 (masih karton) ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=1 · pricePkg=18000 · priceBase=- · mode=package · karton=ON
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 100 botol (1 karton)
[SUM] Tambahan stok | 100 botol (= 50.000 pcs) · = 1 karton
[SUM] Harga per botol | Rp 180
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 18.000

=== step 5: toggle Karton OFF, qty 1 → 6 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=6 · pricePkg=18000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 6 botol
[SUM] Tambahan stok | 6 botol (= 3.000 pcs)
[SUM] Harga per botol | Rp 18.000
[SUM] Harga per pcs | Rp 36
[SUM] Total biaya | Rp 108.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > kombinasi: existing + botol · qty & harga & karton per viewport > snapshot: mobile · existing · botol · qty+harga+karton 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 2 botol (= 1.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 4 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=4 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 4 botol
[SUM] Tambahan stok | 4 botol (= 2.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 40.000

=== step 2: harga 10000 → 15000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=4 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 4 botol
[SUM] Tambahan stok | 4 botol (= 2.000 pcs)
[SUM] Harga per botol | Rp 15.000
[SUM] Harga per pcs | Rp 30
[SUM] Total biaya | Rp 60.000

=== step 3: toggle Karton ON, qty 4 → 1 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=1 · pricePkg=15000 · priceBase=- · mode=package · karton=ON
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 100 botol (1 karton)
[SUM] Tambahan stok | 100 botol (= 50.000 pcs) · = 1 karton
[SUM] Harga per botol | Rp 150
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 15.000

=== step 4: harga 15000 → 18000 (masih karton) ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=1 · pricePkg=18000 · priceBase=- · mode=package · karton=ON
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 100 botol (1 karton)
[SUM] Tambahan stok | 100 botol (= 50.000 pcs) · = 1 karton
[SUM] Harga per botol | Rp 180
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 18.000

=== step 5: toggle Karton OFF, qty 1 → 6 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=6 · pricePkg=18000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 6 botol
[SUM] Tambahan stok | 6 botol (= 3.000 pcs)
[SUM] Harga per botol | Rp 18.000
[SUM] Harga per pcs | Rp 36
[SUM] Total biaya | Rp 108.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > price walk (packageMode) per viewport > snapshot: desktop · new · botol · harga 10000 → 12500 → 9000 → 0 → 15000 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: harga 10000 → 12500 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=2 · pricePkg=12500 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 12.500
[SUM] Harga per pcs | Rp 25
[SUM] Total biaya | Rp 25.000

=== step 2: harga 12500 → 9000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=2 · pricePkg=9000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 9.000
[SUM] Harga per pcs | Rp 18
[SUM] Total biaya | Rp 18.000

=== step 3: harga 9000 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=2 · pricePkg=0 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 0
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 0

=== step 4: harga 0 → 15000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=2 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 15.000
[SUM] Harga per pcs | Rp 30
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > price walk (packageMode) per viewport > snapshot: desktop · new · gram · harga 10000 → 12500 → 9000 → 0 → 15000 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 20.000

=== step 1: harga 10000 → 12500 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=2 · pricePkg=12500 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 12.500
[SUM] Harga per g | Rp 13
[SUM] Total biaya | Rp 25.000

=== step 2: harga 12500 → 9000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=2 · pricePkg=9000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 9.000
[SUM] Harga per g | Rp 9
[SUM] Total biaya | Rp 18.000

=== step 3: harga 9000 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=2 · pricePkg=0 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 0
[SUM] Harga per g | Rp 0
[SUM] Total biaya | Rp 0

=== step 4: harga 0 → 15000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=2 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 15.000
[SUM] Harga per g | Rp 15
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > price walk (packageMode) per viewport > snapshot: desktop · new · sachet · harga 10000 → 12500 → 9000 → 0 → 15000 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 20.000

=== step 1: harga 10000 → 12500 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=2 · pricePkg=12500 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 12.500
[SUM] Harga per pcs | Rp 12.500
[SUM] Total biaya | Rp 25.000

=== step 2: harga 12500 → 9000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=2 · pricePkg=9000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 9.000
[SUM] Harga per pcs | Rp 9.000
[SUM] Total biaya | Rp 18.000

=== step 3: harga 9000 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=2 · pricePkg=0 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 0
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 0

=== step 4: harga 0 → 15000 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=2 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 15.000
[SUM] Harga per pcs | Rp 15.000
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > price walk (packageMode) per viewport > snapshot: mobile · new · botol · harga 10000 → 12500 → 9000 → 0 → 15000 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: harga 10000 → 12500 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=2 · pricePkg=12500 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 12.500
[SUM] Harga per pcs | Rp 25
[SUM] Total biaya | Rp 25.000

=== step 2: harga 12500 → 9000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=2 · pricePkg=9000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 9.000
[SUM] Harga per pcs | Rp 18
[SUM] Total biaya | Rp 18.000

=== step 3: harga 9000 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=2 · pricePkg=0 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 0
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 0

=== step 4: harga 0 → 15000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=2 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 15.000
[SUM] Harga per pcs | Rp 30
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > price walk (packageMode) per viewport > snapshot: mobile · new · gram · harga 10000 → 12500 → 9000 → 0 → 15000 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 20.000

=== step 1: harga 10000 → 12500 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=2 · pricePkg=12500 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 12.500
[SUM] Harga per g | Rp 13
[SUM] Total biaya | Rp 25.000

=== step 2: harga 12500 → 9000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=2 · pricePkg=9000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 9.000
[SUM] Harga per g | Rp 9
[SUM] Total biaya | Rp 18.000

=== step 3: harga 9000 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=2 · pricePkg=0 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 0
[SUM] Harga per g | Rp 0
[SUM] Total biaya | Rp 0

=== step 4: harga 0 → 15000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=2 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 15.000
[SUM] Harga per g | Rp 15
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > price walk (packageMode) per viewport > snapshot: mobile · new · sachet · harga 10000 → 12500 → 9000 → 0 → 15000 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 20.000

=== step 1: harga 10000 → 12500 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=2 · pricePkg=12500 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 12.500
[SUM] Harga per pcs | Rp 12.500
[SUM] Total biaya | Rp 25.000

=== step 2: harga 12500 → 9000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=2 · pricePkg=9000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 9.000
[SUM] Harga per pcs | Rp 9.000
[SUM] Total biaya | Rp 18.000

=== step 3: harga 9000 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=2 · pricePkg=0 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 0
[SUM] Harga per pcs | Rp 0
[SUM] Total biaya | Rp 0

=== step 4: harga 0 → 15000 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=2 · pricePkg=15000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 15.000
[SUM] Harga per pcs | Rp 15.000
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · existing · botol 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 2 botol (= 1.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 5 botol
[SUM] Tambahan stok | 5 botol (= 2.500 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 10 botol
[SUM] Tambahan stok | 10 botol (= 5.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 0 botol
[SUM] Tambahan stok | 0 botol (= 0 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 3 botol
[SUM] Tambahan stok | 3 botol (= 1.500 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · existing · gram 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 gram (= 2 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 5 gram
[SUM] Tambahan stok | 5 gram (= 5 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 10 gram
[SUM] Tambahan stok | 10 gram (= 10 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 0 gram
[SUM] Tambahan stok | 0 gram (= 0 g)
[SUM] Harga per gram | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 3 gram
[SUM] Tambahan stok | 3 gram (= 3 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · existing · pcs 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 2 pcs
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 6.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 5 pcs
[SUM] Tambahan stok | 5 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 15.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 10 pcs
[SUM] Tambahan stok | 10 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 30.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 0 pcs
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 3 pcs
[SUM] Tambahan stok | 3 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 9.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · existing · sachet 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 sachet (= 2 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 5 sachet
[SUM] Tambahan stok | 5 sachet (= 5 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 10 sachet
[SUM] Tambahan stok | 10 sachet (= 10 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 0 sachet
[SUM] Tambahan stok | 0 sachet (= 0 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 3 sachet
[SUM] Tambahan stok | 3 sachet (= 3 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · new · botol 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 5 botol
[SUM] Tambahan stok | 2.500 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 10 botol
[SUM] Tambahan stok | 5.000 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 0 botol
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · botol 500 pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 3 botol
[SUM] Tambahan stok | 1.500 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · new · gram 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 5 gram
[SUM] Tambahan stok | 5 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 10 gram
[SUM] Tambahan stok | 10 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 0 gram
[SUM] Tambahan stok | 0 g
[SUM] Harga per gram | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · gram 1000 g
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 3 gram
[SUM] Tambahan stok | 3 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · new · pcs 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 2 pcs
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 6.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 5 pcs
[SUM] Tambahan stok | 5 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 15.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 10 pcs
[SUM] Tambahan stok | 10 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 30.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 0 pcs
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 3 pcs
[SUM] Tambahan stok | 3 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 9.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: desktop · new · sachet 1`] = `
"=== step 0: initial ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 5 sachet
[SUM] Tambahan stok | 5 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 10 sachet
[SUM] Tambahan stok | 10 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 0 sachet
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=desktop (1280px)
[layout] header: flex-row (sm+)
[layout] form-row: grid-cols-2 (sm+)
[layout] summary: grid-cols-3 (lg+)
[layout] karton-flow: inline
[layout] heading-truncate: off
[SUM] Ringkasan(shown) | Barang baru · sachet 1 pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 3 sachet
[SUM] Tambahan stok | 3 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · existing · botol 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 2 botol (= 1.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 5 botol
[SUM] Tambahan stok | 5 botol (= 2.500 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 10 botol
[SUM] Tambahan stok | 10 botol (= 5.000 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 0 botol
[SUM] Tambahan stok | 0 botol (= 0 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item BOTOL · botol 500 …
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item BOTOL · botol 500 pcs
[SUM] Jumlah kemasan | 3 botol
[SUM] Tambahan stok | 3 botol (= 1.500 pcs)
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · existing · gram 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 gram (= 2 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 5 gram
[SUM] Tambahan stok | 5 gram (= 5 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 10 gram
[SUM] Tambahan stok | 10 gram (= 10 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 0 gram
[SUM] Tambahan stok | 0 gram (= 0 g)
[SUM] Harga per gram | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item GRAM · gram 1000 g
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item GRAM · gram 1000 g
[SUM] Jumlah kemasan | 3 gram
[SUM] Tambahan stok | 3 gram (= 3 kg)
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · existing · pcs 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 2 pcs
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 6.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 5 pcs
[SUM] Tambahan stok | 5 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 15.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 10 pcs
[SUM] Tambahan stok | 10 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 30.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 0 pcs
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item PCS · pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Item PCS · pcs
[SUM] Jumlah kemasan | 3 pcs
[SUM] Tambahan stok | 3 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 9.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · existing · sachet 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 …
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 sachet (= 2 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 …
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 5 sachet
[SUM] Tambahan stok | 5 sachet (= 5 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 …
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 10 sachet
[SUM] Tambahan stok | 10 sachet (= 10 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 …
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 0 sachet
[SUM] Tambahan stok | 0 sachet (= 0 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Item SACHET · sachet 1 …
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Item SACHET · sachet 1 pcs
[SUM] Jumlah kemasan | 3 sachet
[SUM] Tambahan stok | 3 sachet (= 3 pcs)
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · new · botol 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 2 botol
[SUM] Tambahan stok | 1.000 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 5 botol
[SUM] Tambahan stok | 2.500 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 10 botol
[SUM] Tambahan stok | 5.000 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 0 botol
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · botol 500…
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · botol 500 pcs
[SUM] Jumlah kemasan | 3 botol
[SUM] Tambahan stok | 1.500 pcs
[SUM] Harga per botol | Rp 10.000
[SUM] Harga per pcs | Rp 20
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · new · gram 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 2 gram
[SUM] Tambahan stok | 2 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 5 gram
[SUM] Tambahan stok | 5 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 10 gram
[SUM] Tambahan stok | 10 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 0 gram
[SUM] Tambahan stok | 0 g
[SUM] Harga per gram | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · gram 1000…
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · gram 1000 g
[SUM] Jumlah kemasan | 3 gram
[SUM] Tambahan stok | 3 kg
[SUM] Harga per gram | Rp 10.000
[SUM] Harga per g | Rp 10
[SUM] Total biaya | Rp 30.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · new · pcs 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=2 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 2 pcs
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 6.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=5 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 5 pcs
[SUM] Tambahan stok | 5 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 15.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=10 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 10 pcs
[SUM] Tambahan stok | 10 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 30.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=0 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 0 pcs
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · pcs
[INPUT] qty=3 · pricePkg=10000 · priceBase=3000 · mode=base
[SUM] Ringkasan(raw) | Barang baru · pcs
[SUM] Jumlah kemasan | 3 pcs
[SUM] Tambahan stok | 3 pcs
[SUM] Harga per pcs | Rp 3.000
[SUM] Total biaya | Rp 9.000"
`;

exports[`Gudang — snapshot qty × price mutation × viewport > qty walk: 2 → 5 → 10 → 0 → 3 (per viewport × packageType × mode) > snapshot: mobile · new · sachet 1`] = `
"=== step 0: initial ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=2 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 2 sachet
[SUM] Tambahan stok | 2 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 20.000

=== step 1: qty 2 → 5 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=5 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 5 sachet
[SUM] Tambahan stok | 5 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 50.000

=== step 2: qty 5 → 10 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=10 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 10 sachet
[SUM] Tambahan stok | 10 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 100.000

=== step 3: qty 10 → 0 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=0 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 0 sachet
[SUM] Tambahan stok | 0 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Total biaya | Rp 0

=== step 4: qty 0 → 3 ===
# viewport=mobile (390px)
[layout] header: grid-cols-[1fr_auto] (mobile)
[layout] form-row: grid-cols-1 (mobile)
[layout] summary: grid-cols-1 (mobile)
[layout] karton-flow: stacked
[layout] heading-truncate: on
[SUM] Ringkasan(shown) | Barang baru · sachet 1 …
[INPUT] qty=3 · pricePkg=10000 · priceBase=- · mode=package
[SUM] Ringkasan(raw) | Barang baru · sachet 1 pcs
[SUM] Jumlah kemasan | 3 sachet
[SUM] Tambahan stok | 3 pcs
[SUM] Harga per sachet | Rp 10.000
[SUM] Harga per pcs | Rp 10.000
[SUM] Total biaya | Rp 30.000"
`;
